--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "mammoth": "^1.6.0",
     "pdf-lib": "^1.17.1",
-    "mammoth": "^1.6.0"
+    "pdfjs-dist": "^5.3.93"
   }
 }
